Bug 825 - [PATCH] Sparc build errors
Summary: [PATCH] Sparc build errors
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/General (show other bugs)
Version: 6.7.0
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: Roland Mainz
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-07-05 16:44 UTC by Dan Williams
Modified: 2005-01-31 22:03 UTC (History)
5 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Corrects some small Sparc build errors (1.21 KB, patch)
2004-07-05 16:45 UTC, Dan Williams
no flags Details | Splinter Review
rate-fix.patch (914 bytes, patch)
2004-07-21 00:50 UTC, Jeremy Huddleston
no flags Details | Splinter Review
sparc-x11.patch (1.25 KB, patch)
2004-07-21 02:18 UTC, Jeremy Huddleston
no flags Details | Splinter Review
[FIXED_X11R68x] xorg-sparc26headers.patch - applies against 6.8.0 (1.24 KB, patch)
2004-09-21 21:33 UTC, Jeremy Huddleston
roland.mainz: 6.8-branch+
Details | Splinter Review

Description Dan Williams 2004-07-05 16:44:38 UTC
This patch corrects some small Sparc build errors.
Comment 1 Dan Williams 2004-07-05 16:45:22 UTC
Created attachment 439 [details] [review]
Corrects some small Sparc build errors
Comment 2 Dan Williams 2004-07-05 16:52:40 UTC
Build was using Aurora Linux Wombat (built from Fedora Core v1.92).
Comment 3 Jeremy Huddleston 2004-07-21 00:50:16 UTC
Created attachment 505 [details] [review]
rate-fix.patch

I believe the current attachment is the wrong solution... the #endifs just need
to be moved up a bit so the #define does affect the second block.

See http://bugs.gentoo.org/show_bug.cgi?id=55757 for more info
Comment 4 Jeremy Huddleston 2004-07-21 01:05:40 UTC
correction to my wording above... it should say:

the #endifs just need to be moed up so the #define does NOT affect (effect?  I
never remember) the seconf block
Comment 5 Jeremy Huddleston 2004-07-21 02:18:37 UTC
Created attachment 506 [details] [review]
sparc-x11.patch

added in the xf86Sbus.h hunk from the original attachment as my patch was
missing it... sorry about that.
Comment 6 Mike A. Harris 2004-08-31 17:22:44 UTC
I believe this patch may cause the build to fail on older Linux kernel
source.  Wether that is an important issue or not I'm not sure.  The
code present is kindof an ugly hack, but if it's removed, I think
something should replace it which equally will work with both old and
new kernels.

Comment 7 Jeremy Huddleston 2004-09-01 12:05:24 UTC
actually, that's not true.  The hack was already in there, but the hack was
incorrect.  This simply fixes the hack.
Comment 8 Seemant Kulleen 2004-09-02 13:27:12 UTC
we're testing it on gentoo's 904 build; will let you know the results via the
mailing list and here.
Comment 9 Jeremy Huddleston 2004-09-21 21:33:36 UTC
Created attachment 956 [details] [review]
[FIXED_X11R68x] xorg-sparc26headers.patch - applies against 6.8.0

fixed to apply against 6.8.0
Comment 10 Donnie Berkholz 2005-01-27 00:10:22 UTC
Comment on attachment 956 [details] [review]
[FIXED_X11R68x] xorg-sparc26headers.patch - applies against 6.8.0

This fixes a broken build on sparc linux using 2.6 kernel headers. I was just
looking through Gentoo's patches and caught it.
Comment 11 Roland Mainz 2005-02-01 16:40:00 UTC
Comment on attachment 956 [details] [review]
[FIXED_X11R68x] xorg-sparc26headers.patch - applies against 6.8.0

Approved for commit into X11R6.8.x stable branch in the 2005-01-31 Xorg
release-wranglers phone call.
Please do not commit yourself, I'll do that myself in a few mins...
Comment 12 Roland Mainz 2005-02-01 16:54:57 UTC
Taking bug myself for commit...
Comment 13 Roland Mainz 2005-02-01 16:56:35 UTC
Comment on attachment 956 [details] [review]
[FIXED_X11R68x] xorg-sparc26headers.patch - applies against 6.8.0

Patch checked-in into Xorg trunk:

/cvs/xorg/xc/ChangeLog,v  <--  xc/ChangeLog
new revision: 1.742; previous revision: 1.741
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
/cvs/xorg/xc/programs/Xserver/hw/xfree86/os-support/bus/xf86Sbus.h,v  <-- 
xc/programs/Xserver/hw/xfree86/os-support/bus/xf86Sbus.h
new revision: 1.3; previous revision: 1.2
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
/cvs/xorg/xc/programs/Xserver/hw/xfree86/os-support/linux/lnx_io.c,v  <-- 
xc/programs/Xserver/hw/xfree86/os-support/linux/lnx_io.c
new revision: 1.3; previous revision: 1.2
/cvs/xorg/xc/programs/Xserver/hw/xfree86/os-support/linux/lnx_kbd.c,v  <-- 
xc/programs/Xserver/hw/xfree86/os-support/linux/lnx_kbd.c
new revision: 1.6; previous revision: 1.5
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
Mailing the commit message to xorg-commit@lists.freedesktop.org...
Comment 14 Roland Mainz 2005-02-01 17:02:48 UTC
Comment on attachment 956 [details] [review]
[FIXED_X11R68x] xorg-sparc26headers.patch - applies against 6.8.0

Patch checked-in into X11R6.8.x stable branch:

/cvs/xorg/xc/ChangeLog,v  <--  xc/ChangeLog
new revision: 1.365.2.145; previous revision: 1.365.2.144
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
/cvs/xorg/xc/programs/Xserver/hw/xfree86/os-support/bus/xf86Sbus.h,v  <-- 
xc/programs/Xserver/hw/xfree86/os-support/bus/xf86Sbus.h
new revision: 1.2.4.1; previous revision: 1.2
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
/cvs/xorg/xc/programs/Xserver/hw/xfree86/os-support/linux/lnx_io.c,v  <-- 
xc/programs/Xserver/hw/xfree86/os-support/linux/lnx_io.c
new revision: 1.2.4.1; previous revision: 1.2
/cvs/xorg/xc/programs/Xserver/hw/xfree86/os-support/linux/lnx_kbd.c,v  <-- 
xc/programs/Xserver/hw/xfree86/os-support/linux/lnx_kbd.c
new revision: 1.2.4.2; previous revision: 1.2.4.1
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
Mailing the commit message to xorg-commit@lists.freedesktop.org...
Comment 15 Roland Mainz 2005-02-01 17:03:27 UTC
Patch checked-in into Xorg trunk and X11R6.8.x stable branch...

... marking bug as FIXED.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.