xc/programs/Xserver/hw/xfree86/os-support/bus/xf86Sbus.h xc/programs/Xserver/hw/xfree86/os-support/linux/lnx_io.c //bugs.freedesktop.org/show_bug.cgi?id=825) attachment #956     (https://bugs.freedesktop.org/attachment.cgi?id=956): Fix build     problems on Linux/SPARC. Patch by Jeremy Huddleston     <eradicator@gentoo.org>. Approved in the 2005-01-31 Xorg     release-wranglers phone call.