hw/xfree86/os-support/linux/lnx_kbd.c
@@ -145,6 +145,8 @@ KDKBDREP_ioctl_ok(int rate, int delay) {
 #endif /* KDKBDREP */
 }
 
+#undef rate
+
 static int
 KIOCSRATE_ioctl_ok(int rate, int delay) {
 #ifdef KIOCSRATE
@@ -171,8 +173,6 @@ KIOCSRATE_ioctl_ok(int rate, int delay) {
    return 0;
 #endif /* KIOCSRATE */
 }
-
-#undef rate
 
 static void
 SetKbdRepeat(InputInfoPtr pInfo, char rad)
